--- a/ClickAndEatWeb/src/app/home/home.component.html
+++ b/ClickAndEatWeb/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<strong>Status: {{ givenName ? 'logged in' : 'logged out' }} </strong>
+<strong>Status: {{ hasValidIdToken ? 'logged in' : 'logged out' }} </strong>
 <h1 *ngIf="!givenName">Welcome!</h1>
 <h1 *ngIf="givenName">Welcome, {{ givenName }}!</h1>
 
